wrote test case for validator deposit

--- a/test.env
+++ b/test.env
@@ -1,3 +1,4 @@
 MNEMONIC="differ valley cliff whale heavy video grocery host nerve anger noodle deny"
 PRIVATE_KEY=
 INFURA_API_KEY=
+POLYGON_API_KEY=
