--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
   "name": "hardhat-project",
-  "scripts":{
+  "scripts": {
     "build": "hardhat compile",
-    "deploy:network": "hardhat deploy --network",
-    "test:ci": "hardhat watch ci",
+    "deploy:network": "hardhat run --network",
+    "test": "hardhat test --trace",
     "clean": "hardhat clean",
     "build:watch": "hardhat watch compilation",
     "test:watch": "hardhat watch test_mainnet"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.1.8",
     "@openzeppelin/contracts": "^5.0.1",
     "dotenv": "^16.3.1"
   },
-
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.3",
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.3",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
-    "chai": "^4.3.10",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
+    "chai": "4",
     "ethereum-waffle": "^4.0.10",
-    "ethers": "^5.7.2",
-    "hardhat": "^2.19.2"
+    "ethers": "5",
+    "hardhat": "^2.19.2",
+    "hardhat-gas-reporter": "^1.0.9",
+    "hardhat-tracer": "^2.7.0",
+    "solidity-coverage": "^0.8.6",
+    "typechain": "^8.3.2"
   },
   "version": "1.0.0",
   "main": "hardhat.config.js",
