--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "clean": "hardhat clean",
     "build:watch": "hardhat watch compilation",
     "test:watch": "hardhat watch test_mainnet",
-    "prettier": "prettier --write --plugin=prettier-plugin-solidity 'contracts/**/*.sol'"
+    "prettier": "prettier --write --plugin=prettier-plugin-solidity 'contracts/**/*.sol'",
+    "check-storage": "hardhat storage-layout --check",
+    "update-storage": "hardhat storage-layout --update",
+    "storage-slots":"hardhat check"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.1",
@@ -31,6 +34,8 @@
     "ethers": "5",
     "hardhat": "^2.19.2",
     "hardhat-gas-reporter": "^1.0.9",
+    "hardhat-storage-layout": "^0.1.7",
+    "hardhat-storage-layout-changes": "^0.1.2",
     "hardhat-tracer": "^2.7.0",
     "prettier": "^3.2.4",
     "prettier-plugin-solidity": "^1.3.1",
