--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ethereum-waffle": "^4.0.10",
     "ethers": "5",
     "hardhat": "^2.19.2",
+    "hardhat-contract-sizer": "^2.10.0",
     "hardhat-gas-reporter": "^1.0.9",
     "hardhat-storage-layout": "^0.1.7",
     "hardhat-storage-layout-changes": "^0.1.2",
